# mir_robot

mir_description/urdf/: mir.urdf.xacro
mir_driver/nodes/: fake_mir_joint_publisher.py  mir_bridge.py
mir_msgs/: CMakeLists.txt
